tests/test89.rael.exp
Error [tests/test89.rael:1:17]: Index too big
| log "string" at 8
|                 ^
