tests/test89.rael
log "string" at 8